# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = ["crates/xtask"]

[workspace.package]
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/haruki7049/portfolio"
publish = false

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.40", features = ["derive", "string"] }
dioxus = { version = "0.7.5", features = ["router"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wasm-bindgen = "=0.2.114" # For nixpkgs' pkgs.dioxus-cli with wasm-bindgen-cli_0_2_114

[package]
name = "portfolio"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
dioxus.workspace = true
wasm-bindgen.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
